Add CP/DP version negotiation, bump to v0.9.0, add upgrade guide
